# papagaia

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/papagaia-cli/: Cargo.toml
crates/papagaia-cli/src/: main.rs  systemd.rs
crates/papagaia-core/: Cargo.toml
crates/papagaia-core/src/: config.rs  ipc.rs  lib.rs
crates/papagaia-daemon/: Cargo.toml
crates/papagaia-daemon/src/: app.rs  cancel.rs  clipboard.rs  dictation.rs  llm.rs  main.rs  overlay.rs
crates/papagaia-overlay/: Cargo.toml
crates/papagaia-overlay/src/: main.rs
