[workspace]
members = [
    "crates/papagaia-core",
    "crates/papagaia-daemon",
    "crates/papagaia-cli",
    "crates/papagaia-overlay",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["ceifa"]

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.6.1", features = ["derive"] }
clap_complete = { version = "4.6.2", features = ["unstable-dynamic"] }
dirs = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
libc = "0.2.185"
tokio = { version = "1.52.0", features = ["macros", "rt", "net", "io-util", "process", "sync", "time", "signal"] }
toml = { version = "0.9.8", default-features = false, features = ["parse", "serde"] }
