[package]
name = "papagaia-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
anyhow.workspace = true
libc.workspace = true
serde_json.workspace = true
tokio.workspace = true
papagaia-core = { path = "../papagaia-core" }
alsa = "0.9.1"
hound = "3.5.1"
